# nexia

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  Makefile  README.md  build.sh  pyproject.toml  requirements_tests.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  pr-title.yml
docs/: conf.py  installation.rst
nexia/: const.py  home.py  sensor.py  thermostat.py  util.py  zone.py
tests/: test_home.py
tests/fixtures/: sensors_xl1050_house.json  sensors_xl1050_thermostat.json  two_ux360_multizone.json
