[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "nexia"
version = "2.11.5"
description = "Python library for connecting to nexia"
readme = "README.md"
keywords = [ "nexia" ]
license = "Apache-2.0"
authors = [ { name = "J. Nick Koston", email = "nick@koston.org" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "dependencies" ]
urls."Bug Tracker" = "https://github.com/hvaclibs/nexia/issues"
urls."Homepage" = "https://github.com/hvaclibs/nexia"
urls."Repository" = "https://github.com/hvaclibs/nexia"

[tool.poetry]
packages = [
  { include = "nexia" },
]
dependencies.python = "^3.10"
dependencies.aiohttp = ">=3.8.0"
dependencies.orjson = ">=3.7.2"
dependencies.propcache = ">=0.2.0"
group.dev.dependencies.pytest = ">=8.0"
group.dev.dependencies.pytest-asyncio = ">=1.0"
group.dev.dependencies.pytest-cov = ">=5.0"
group.dev.dependencies.aiointercept = ">=0.1.7"
group.dev.dependencies.mypy = ">=1.18"

# PEP 561 marker. poetry-core does not pack non-.py files into the wheel by
# default, so declare it explicitly for sdist + wheel.
include = [ { path = "nexia/py.typed", format = [ "sdist", "wheel" ] } ]

[tool.ruff]
lint.select = [
  "A",    # flake8-builtins
  "ARG",  # flake8-unused-arguments
  "ASYNC", # async rules
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe complexity
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # eradicate (commented-out code)
  "EXE",  # flake8-executable
  "F",    # pyflakes/autoflake
  "FA",   # flake8-future-annotations
  "FIX",  # flake8-fixme
  "FLY",  # flynt
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "INP",  # flake8-no-pep420
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "NPY",  # numpy-specific rules
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",   # flake8-type-checking
  "TD",   # flake8-todos
  "TID",  # tidy imports
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
  "YTT",  # flake8-2020
]
lint.ignore = [
  "ASYNC109", # `timeout` params are part of the public async API
  "COM812",
  "COM819",
  "D102",    # Too many to fix now
  "D103",    # Too many to fix now
  "D202",    # No blank lines allowed after function docstring
  "D203",    # 1 blank line required before class docstring
  "D205",    # Too many to fix now
  "D206",
  "D213",    # Multi-line docstring summary should start at the second line
  "D300",
  "D400",    # Too many to fix now
  "D401",    # Too many to fix right now
  "D406",    # Section name should end with a newline
  "D407",    # Section name underlining
  "D415",    # Too many to fix now
  "E111",
  "E114",
  "E117",
  "E501",    # line too long
  "PGH003",  # Too many to fix now
  "PLC1901", # {existing} can be simplified to {replacement} as an empty string is falsey; too many false positives
  # Disabled because ruff does not understand type of __all__ generated by a function
  "PLE0605",
  "PLR0911", # Too many return statements ({returns} > {max_returns})
  "PLR0912", # Too many branches ({branches} > {max_branches})
  "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
  "PLR0915", # Too many statements ({statements} > {max_statements})
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "N802",    # Uppercase URL/string properties (API_MOBILE_*_URL) are public API; renaming breaks callers
  "N818",    # LoginFailedException is public API; renaming to add an Error suffix breaks callers
  "PT011",   # pytest.raises({exception}) is too broad, set the `match` parameter or use a more specific exception
  "PT018",   # Assertion should be broken down into multiple parts
  "PTH118",  # Too many to fix now
  "PTH120",  # Too many to fix now
  "PTH123",  # Too many to fix now
  "RUF001",  # String contains ambiguous unicode character.
  "RUF002",  # Docstring contains ambiguous unicode character.
  "RUF003",  # Comment contains ambiguous unicode character.
  "RUF015",  # Prefer next(...) over single element slice
  "SIM102",  # Use a single if statement instead of nested if statements
  "SIM103",  # Return the condition {condition} directly
  "SIM108",  # Use ternary operator {contents} instead of if-else-block
  "SIM115",  # Use context handler for opening files
  "T201",    # used in examples
  "T203",    # used in examples
  # Moving imports into type-checking blocks can mess with pytest.patch()
  "TC001",   # Move application import {} into a type-checking block
  "TC002",   # Move third-party import {} into a type-checking block
  "TC003",   # Move standard library import {} into a type-checking block
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TRY400",  # Use `logging.exception` instead of `logging.error`
  # Ignored due to performance: https://github.com/charliermarsh/ruff/issues/2923
  "UP038",   # Use `X | Y` in `isinstance` call instead of `(X, Y)`
  # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191"
]
# Tests legitimately assert, reach into private state, use literal credentials,
# request fixtures they don't reference, and touch the filesystem in async bodies.
lint.per-file-ignores."docs/conf.py" = [
  "ERA001", # Sphinx config keeps commented-out option boilerplate
  "INP001", # Sphinx config is intentionally not part of a package
]
lint.per-file-ignores."tests/**" = [
  "ARG",     # unused fixture arguments are requested for their side effects
  "ASYNC240", # blocking Path calls are fine in test bodies
  "S101",    # asserts are the point of the test suite
  "S105",    # literal test credentials are not real secrets
  "S106",    # literal test credentials are not real secrets
  "SLF",     # tests pin invariants by reaching into private state
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.asyncio_mode = "auto"
ini_options.asyncio_default_fixture_loop_scope = "function"

[tool.coverage]
run.branch = true
run.source = [ "nexia" ]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.semantic_release]
branch = "master"
# Existing release tags have no "v" prefix (e.g. 2.11.1), unlike PSR's default
# "v{version}"; without this PSR finds no prior release and bumps from 0.0.0.
tag_format = "{version}"
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "nexia/const.py:__version__" ]
build_command = "pip install poetry && poetry build"
